--- a/src/app/shared/components/searchbar/searchbar.component.scss
+++ b/src/app/shared/components/searchbar/searchbar.component.scss
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
 
-    height: 10%;
+    height: 7%;
     width: 100%;
 
     padding: 0 40px 0 20px;
@@ -74,5 +74,11 @@
     &-input input {
       width: 150px;
     }
+  }
+}
+
+@media (max-height: 768px) {
+  .search-container {
+    height: 10%;
   }
 }
